--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-PORT=3000
+PORT=5000
+DB_NAME=dbsql
+DB_USER=ivanzw
+DB_PASSWORD=wjtxBWpfIOwFhmhnFOdieoS9mwfzC8BR
+DB_HOST=dpg-chb328m7avjcvo3icru0-a
+DB_PORT=5432
