--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ DB_USER=ivanzw
 DB_PASSWORD=wjtxBWpfIOwFhmhnFOdieoS9mwfzC8BR
 DB_HOST=dpg-chb328m7avjcvo3icru0-a.frankfurt-postgres.render.com
 DB_PORT=5432
+
+#DB_NAME=test-local
+#DB_USER=postgres
+#DB_PASSWORD=admin
+#DB_HOST=localhost
+#DB_PORT=5432
