--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=5000
 DB_NAME=dbsql
 DB_USER=ivanzw
 DB_PASSWORD=wjtxBWpfIOwFhmhnFOdieoS9mwfzC8BR
-DB_HOST=dpg-chb328m7avjcvo3icru0-a.frankfurt-postgres.render.com
+DB_HOST=dpg-chb328m7avjcvo3icru0-a
 DB_PORT=5432
 
 #DB_NAME=test-local
